--- a/Kaggle_Competition.ipynb
+++ b/Kaggle_Competition.ipynb
@@ -3955,7 +3955,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 12) Try doing NLP To Increase Accuracy "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Insert all of Nicos Code! "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Engagment of Class "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We sent out a kaggle "
    ]
   },
   {
