better descriptionof random test section 11

--- a/Kaggle_Competition.ipynb
+++ b/Kaggle_Competition.ipynb
@@ -3851,16 +3851,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 11) Let's see if the model then a random test "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 164,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import random\n"
+    "## 11) Test to see if our model is better than a random test "
    ]
   },
   {
@@ -3879,25 +3870,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#get a list of the unique category labels \n",
     "labels = list(y.unique())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
-    "map_labels ={i : labels[i] for i in range(len(labels)) }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 174,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 20 in picking_a_label_at_random "
+    "#create a dictionary that maps 0-19 to their label names \n",
+    "map_labels = {i : labels[i] for i in range(len(labels)) }"
    ]
   },
   {
@@ -3943,7 +3927,7 @@
    "metadata": {},
    "source": [
     "### Explanation: \n",
-    "The accuracy of choosing a cuisine at random is 0.051. This is way less than the current accuracy score of our random forest classifier. Our model has an accuracy score of 63%. Therefore, this is a comparatively better model. "
+    "To help gadge the usefulness of the model we wanted to test whether picking a label at random has greater accuracy than the model created. A random test provides a baseline for our model to be compared too. After conducting a random test, and then computing the accuracy of cuisine at random is 5.1%. This is way less than the current accuracy score of the random forest classifier. Our model has an accuracy score of 63%; therefore, this is a comparatively better model than the baseline. using a random test as a baseline."
    ]
   },
   {
